tests/ui/multiple_arbitrary.stderr
error: Multiple conflicting #[arbitrary] attributes found on field `x`
 --> tests/ui/multiple_arbitrary.rs:5:5
  |
5 | /     #[arbitrary(value = 2)]
6 | |     #[arbitrary(value = 3)]
7 | |     x: i32,
  | |__________^
